--- a/discount.html
+++ b/discount.html
@@ -9,7 +9,7 @@
        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 <body>
 
-<h2>Chandra Adithya PAmidala followed by Computes Discount</h2>
+<h2>Chandra Adithya Pamidala followed by Computes Discount</h2>
 
 <form>
     <label for="form1_age">Enter Base Amount </label>
