--- a/vacation.html
+++ b/vacation.html
@@ -9,7 +9,7 @@
        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 <body>
 
-<h2>Divya Krishnamaneni Selects a Vacation</h2>
+<h2>Chandra Adithya Pamidala Selects a Vacation</h2>
 
 <form>
     <input type="checkbox" id="air" name="topping1"   
@@ -33,7 +33,7 @@
     <label for="check">Enter price</label>
     <input type ="text" id="value" name="check"><br>
 
-    <input type="button" class="btn btn-secondary" type="button" onclick="selectVacation()" value="Select a Vacation">
+    <input type="button" class="btn btn-secondary" type="button" onclick="updateVacation()" value="Update the Vacation">
 </form>
 
 
